# anamnesis

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  anamnesis.example.yaml  anamnesis.yaml  pyproject.toml  start.sh
.claude/commands/: curate.md
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: app.css
docs/: PRD-learned-knowledge-wiki.md  karpathy-llm-wiki.md  knowledge-ideas.md  knowledge-three-table-model.md  paper-outline-compilation-over-retrieval.md  possible-paper.md  request-port.md
docs/anamnesis/: anamnesis-agent-reference.md  anamnesis-behavioral-mining.md  anamnesis-construction.md  anamnesis-framework.md  (+3 more)
knowledge/: anamnesis.md
tasks/: ADR-001-single-runtime-architecture.md  F01-S02-bolus-system.md  F01-S03-anamnesis-md-spec.md  F01-S04-injection-assembly.md  F01-S05-api-layer.md  F01-S06-cli-and-agent-onboarding.md  F01-S07-web-dashboard.md  F01-circle-1-and-2-core.md  F02-S01-episode-storage.md  F02-S02-completion-provider.md  F02-S03-recency-pipeline.md  F02-circle-4-episode-capture.md  F03-S01-agent-profiles.md  F03-S02-injection-routing.md  F03-S03-circle-3-schema.md  F03-S04-compilation-pipeline.md  F03-S05-technical-debt.md  F03-agent-profiles-and-compilation.md  atlas-integration-prd.md  ezra-integration-prd.md  needed-features.md
tests/: helpers.py  test_agent_api.py  test_agent_routing.py  test_api.py  test_assembler.py  test_bolus.py  test_cli.py  test_compile.py  test_completion.py  test_config.py  test_curation.py  test_episode.py  test_framework.py  test_intake.py  test_recency.py  test_schema.py
(+72 files in other folders)
